Prevented line numbers from wrapping

--- a/docs/.vitepress/theme/styles/code.scss
+++ b/docs/.vitepress/theme/styles/code.scss
@@ -45,6 +45,10 @@
     color: #6a737d;
   }
 
+  .line-number {
+    white-space: nowrap;
+  }
+
   & > .shiki {
     grid-area: code;
     overflow-x: auto;
